# davsdk

./: CMakeLists.txt  README.md
.github/workflows/: security.yml
.gitlab/: gitlab-ci-frontier.yml  sync-spack.yml
.gitlab/config/: dynamic_pipeline.yml.in
scripts/ci/gitlab-ci/: cdash-upload.patch  run.sh
spack/configs/: packages.yaml
spack/configs/frontier/: README.md  deploy.sh  modules.yaml  packages.yaml  spack.yaml
spack/configs/template/: spack.yaml
spack/repos/dav/: repo.yaml
